# Yuno_assignment

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  DESIGN.md  README.md  docker-compose.yml
.claude/: settings.local.json
agent-platform/backend/: .dockerignore  Dockerfile  config.py  main.py  pyproject.toml
agent-platform/backend/api/: agents.py  graph.py  runs.py  schemas.py  telegram.py  workflows.py
agent-platform/backend/core/: builder.py  cost.py  llm.py  runtime.py  supervisor.py  templates.py
agent-platform/backend/persistence/: db.py  models.py  repo.py
agent-platform/backend/streaming/: serializers.py  sse.py
agent-platform/backend/telegram/: bot.py  mount.py
agent-platform/backend/tests/: conftest.py  test_agents.py  test_serializers.py  test_sse.py  test_workflows.py
agent-platform/backend/tools/: __init__.py  web_search.py
agent-platform/frontend/: .dockerignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
agent-platform/frontend/app/: globals.css  layout.tsx  page.tsx
agent-platform/frontend/app/agents/: page.tsx
agent-platform/frontend/app/runs/: page.tsx
agent-platform/frontend/app/workflows/: page.tsx
agent-platform/frontend/components/canvas/: AgentNode.tsx  WorkflowCanvas.tsx
agent-platform/frontend/components/chat/: ChatPanel.tsx
agent-platform/frontend/components/monitor/: MonitorDrawer.tsx  UsageBar.tsx
agent-platform/frontend/components/nav/: Sidebar.tsx
agent-platform/frontend/lib/: api.ts  store.ts  useAgentStream.ts
