[project]
name = "agent-platform-backend"
version = "0.1.0"
description = "AI Agent Orchestration Platform — FastAPI + LangGraph supervisor backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]>=0.34",
    # CLAUDE.md pins langgraph==1.1.10, but langchain==1.3.0 requires langgraph>=1.2.0.
    # The spec's two pins are mutually incompatible; we keep langchain==1.3.0 (the
    # newer, intentional choice) and let the resolver pick the matching langgraph.
    "langgraph>=1.2,<2",
    "langgraph-supervisor==0.0.31",
    "langchain==1.3.0",
    "langchain-openai>=1.0",
    "langgraph-checkpoint-sqlite==3.0.3",
    "aiogram==3.28.2",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "langsmith>=0.2",
    "tavily-python>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false
